--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,10 +18,10 @@
     box-sizing: border-box;
 }
 
-.game-field .row .hole {
+.game-field .row .wall {
     height: 16px;
     width: 16px;
-    background: white;
+    background: black;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
