--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,7 +21,7 @@
 .game-field .row .wall {
     height: 16px;
     width: 16px;
-    background: black;
+    background: url('/img/wall.png');
     margin: 0;
     padding: 0;
     box-sizing: border-box;
